<resources>
    <string name="app_name">Sinhala Dictionary</string>
    <string name="drawer_dictionary">Dictionary</string>
    <string name="drawer_translator">Translator</string>
    <string name="drawer_favourite">Favourites</string>
    <string name="drawer_history">History</string>
    <string name="drawer_go_premium">Go Premium</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_rate">Rate this App</string>
    <string name="drawer_like_us">Like us on Facebook</string>
    <string name="drawer_share">Share this App</string>
    <string name="drawer_about">About</string>

    <string name="header_title">Sinhala Dictionary</string>
    <string name="header_version">Version 8.5.1</string>

    <string name="nevigation_drawer_opem">Open Navigation Drawer</string>
    <string name="nevigation_drawer_close">Close Navigation Drawer</string>

    <string name="english">English</string>
    <string name="sinhala">Sinahala</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>